--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="Dq6S2FTn6zMch2FD6Ia5Axcq6Jsn4YAyovgbvE5yof0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicle Theft Complaint System</title>
     <link rel="stylesheet" href="styles.css">
@@ -305,3 +306,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
